--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,85 +11,73 @@
         "plugin:import/warnings",
         "plugin:import/typescript"
     ],
-    "overrides": [
-    ],
+    "overrides": [],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2021,
         "sourceType": "module"
     },
-    "plugins": [
-        "react",
-        "react-hooks",
-        "@typescript-eslint",
-        "prettier"
-    ],
+    "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
     "rules": {
         "prettier/prettier": "off",
         "react/display-name": "off",
         "no-console": [
             "error",
             {
-                "allow": [
-                    "tron",
-                    "info",
-                    "warn", 
-                    "error"
-                ]
+                "allow": ["tron", "info", "warn", "error"]
             }
         ],
-        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "indent": ["error", 4, {"SwitchCase": 1}],
         "spaced-comment": [
             "error",
             "always",
             {
-                "markers": [
-                    "/"
-                ]
+                "markers": ["/"]
             }
         ],
-        "quotes": ["error", "single", {
-            "allowTemplateLiterals": true
-        }],
+        "quotes": [
+            "error",
+            "single",
+            {
+                "allowTemplateLiterals": true
+            }
+        ],
         "import/default": "off",
         "import/prefer-default-export": "off",
         "class-methods-use-this": "off",
         "no-unused-expressions": "off",
         "no-unused-vars": "off",
-        "import/namespace": "off",     
+        "import/namespace": "off",
         "import/no-unresolved": "off",
         "import/no-named-as-default": "off",
         "import/no-named-as-default-member": "off",
         "comma-dangle": "off",
+
         // TypeScript
+        "@typescript-eslint/no-unused-vars": ["error", {"args": "none"}],
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-unused-expressions": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
-        "@typescript-eslint/no-empty-interface": "off",     
         "@typescript-eslint/no-unnecessary-type-constraint": "off",
         "@typescript-eslint/no-var-requires": "off",
-        
+
         // React
         "react/jsx-props-no-spreading": "off",
         "react/jsx-filename-extension": [
             "warn",
             {
-                "extensions": [
-                    ".js",
-                    ".jsx",
-                    ".ts",
-                    ".tsx"
-                ]
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
             }
         ],
         "react/prop-types": "off",
+
         // React Hooks
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "error",
@@ -107,18 +95,16 @@
     "settings": {
         "import/resolver": {
             "node": {
-                "paths": [
-                    "./app"
-                ]
+                "paths": ["./app"]
             }
         },
-        "react": {            
-            "pragma": "React",  // Pragma to use, default to "React"
-            "fragment": "Fragment",  // Fragment to use (may be a property of <pragma>), default to "Fragment"
+        "react": {
+            "pragma": "React", // Pragma to use, default to "React"
+            "fragment": "Fragment", // Fragment to use (may be a property of <pragma>), default to "Fragment"
             "version": "detect" // React version. "detect" automatically picks the version you have installed.
-                                 // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
-                                 // default to latest and warns if missing
-                                 // It will default to "detect" in the future            
+            // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+            // default to latest and warns if missing
+            // It will default to "detect" in the future
         }
     }
 }
