--- a/package.json
+++ b/package.json
@@ -1,75 +1,77 @@
 {
-  "name": "BoTemplate_tsx_rn18",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint --fix .",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/stack": "^6.3.10",
-    "axios": "^1.2.1",
-    "i18next": "^22.4.6",
-    "qs": "^6.11.0",
-    "react": "18.1.0",
-    "react-i18next": "^12.1.1",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.2",
-    "reselect": "^4.1.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.70.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/redux-logger": "^3.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.0.1",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-standard-with-typescript": "^24.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.31.11",
-    "husky": "^8.0.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
-    "typescript": "4.8.4"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
-  }
+    "name": "BoTemplate_tsx_rn18",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "start": "react-native start",
+        "test": "jest",
+        "lint": "yarn lint:ts && yarn lint:style",
+        "lint:ts": "tsc --noEmit",
+        "lint:style": "eslint 'app/**/*.{js,ts,jsx,tsx}'",
+        "lint:fix": "eslint --fix .",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "^1.17.11",
+        "@react-navigation/bottom-tabs": "^6.5.2",
+        "@react-navigation/native": "^6.1.1",
+        "@react-navigation/stack": "^6.3.10",
+        "axios": "1.2.0",
+        "i18next": "^22.4.6",
+        "qs": "^6.11.0",
+        "react": "18.1.0",
+        "react-i18next": "^12.1.1",
+        "react-native": "0.70.5",
+        "react-native-gesture-handler": "^2.8.0",
+        "react-native-safe-area-context": "^4.4.1",
+        "react-native-screens": "^3.18.2",
+        "react-redux": "^8.0.5",
+        "redux": "^4.2.0",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-saga": "^1.2.2",
+        "reselect": "^4.1.7"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9",
+        "@babel/runtime": "^7.12.5",
+        "@react-native-community/eslint-config": "^2.0.0",
+        "@tsconfig/react-native": "^2.0.2",
+        "@types/jest": "^26.0.23",
+        "@types/qs": "^6.9.7",
+        "@types/react": "^18.0.21",
+        "@types/react-native": "^0.70.6",
+        "@types/react-test-renderer": "^18.0.0",
+        "@types/redux-logger": "^3.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.37.0",
+        "babel-jest": "^26.6.3",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "eslint": "^8.0.1",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-standard-with-typescript": "^24.0.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-react": "^7.31.11",
+        "husky": "^8.0.0",
+        "jest": "^26.6.3",
+        "metro-react-native-babel-preset": "0.72.3",
+        "react-test-renderer": "18.1.0",
+        "typescript": "4.8.4"
+    },
+    "jest": {
+        "preset": "react-native",
+        "moduleFileExtensions": [
+            "ts",
+            "tsx",
+            "js",
+            "jsx",
+            "json",
+            "node"
+        ]
+    }
 }
