--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 // prettier-ignore
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": ["ES2021", "ES2021.Promise", "es2019.array", "dom"],
+    "lib": ["es2021"],
     "strict": true,
     "moduleResolution": "node",
     "baseUrl": "./",
@@ -19,7 +20,9 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "target": "esnext",
-    "types": ["jest"]
+    "types": ["jest"],
+    "skipLibCheck": true
   },
+  "include": ["app"],
   "exclude": ["node_modules", "babel.config.js", "metro.config.js"]
 }
