--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "react": "18.1.0",
         "react-i18next": "^12.1.1",
         "react-native": "0.70.5",
+        "react-native-collapsible": "^1.6.0",
         "react-native-gesture-handler": "^2.8.0",
+        "react-native-modalize": "^2.1.1",
+        "react-native-portalize": "^1.0.7",
         "react-native-safe-area-context": "^4.4.1",
         "react-native-screens": "^3.18.2",
         "react-redux": "^8.0.5",
