--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@react-navigation/bottom-tabs": "^6.5.2",
         "@react-navigation/native": "^6.1.1",
         "@react-navigation/stack": "^6.3.10",
-        "axios": "1.2.0",
+        "axios": "1.2.0-alpha.1",
         "i18next": "^22.4.6",
         "qs": "^6.11.0",
         "react": "18.1.0",
