--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,14 @@ target 'BoTemplate_tsx_rn18' do
   end
 
   post_install do |installer|
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['ENABLE_BITCODE'] = 'NO'
+          if config.build_settings['WRAPPER_EXTENSION'] == 'bundle'
+            config.build_settings['DEVELOPMENT_TEAM'] = '36HLY3Y9VN'
+          end
+      end
+    end
     react_native_post_install(
       installer,
       # Set `mac_catalyst_enabled` to `true` in order to apply patches
