--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
         "jest": "^26.6.3",
         "metro-react-native-babel-preset": "0.72.3",
         "react-test-renderer": "18.1.0",
-        "typescript": "4.8.4"
+        "typescript": "4.8.4",
+        "react-native-blob-util": "0.19.2",
+        "@react-native-camera-roll/camera-roll": "6.0.2"
     },
     "jest": {
         "preset": "react-native",
