--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "babel-plugin-module-resolver": "^4.1.0",
         "eslint": "^8.0.1",
         "eslint-config-airbnb": "^19.0.4",
+        "react-native-gifted-charts": "^1.3.16",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-standard-with-typescript": "^24.0.0",
         "eslint-plugin-import": "^2.25.2",
